--- a/.github/workflows/update-iptv.yml
+++ b/.github/workflows/update-iptv.yml
@@ -41,7 +41,7 @@ jobs:
           wget --retry-connrefused  -O temp/fanmingming-ipv6.m3u https://raw.githubusercontent.com/fanmingming/live/refs/heads/main/tv/m3u/ipv6.m3u
           wget --retry-connrefused  -O temp/YanG-1989-Gather.m3u https://raw.githubusercontent.com/YanG-1989/m3u/main/Gather.m3u
           wget --retry-connrefused  -O temp/iptv-org-index.m3u https://iptv-org.github.io/iptv/index.m3u
-          wget --retry-connrefused  -O temp/joevess-iptv_sources.m3u8 https://raw.githubusercontent.com/joevess/IPTV/main/sources/iptv_sources.m3u8
+          wget --retry-connrefused  -O temp/aTV-result.m3u https://raw.githubusercontent.com/alantang1977/aTV/refs/heads/master/output/result.m3u
           wget --retry-connrefused  -O temp/YueChan-APTV.m3u https://raw.githubusercontent.com/YueChan/Live/refs/heads/main/APTV.m3u
           wget --retry-connrefused  -O temp/Guovin-result.m3u https://raw.githubusercontent.com/Guovin/iptv-api/gd/output/result.m3u
           wget --retry-connrefused  -O temp/vbskycn-iptv4.m3u https://raw.githubusercontent.com/vbskycn/iptv/refs/heads/master/tv/iptv4.m3u
@@ -83,17 +83,17 @@ jobs:
           # 覆盖同名文件（无需额外检查）
           mv temp/iptv-org-index.m3u $TARGET_FILE
 
-      # Step 3: 移动文件到 joevess 文件夹（自动创建或覆盖）
-      - name: Move file to folder joevess
+      # Step 3: 移动文件到 aTV 文件夹（自动创建或覆盖）
+      - name: Move file to folder aTV
         run: |
-          TARGET_FOLDER=joevess
-          TARGET_FILE=$TARGET_FOLDER/iptv_sources.m3u8
+          TARGET_FOLDER=aTV
+          TARGET_FILE=$TARGET_FOLDER/result.m3u
 
           # 确保目标文件夹存在
           mkdir -p $TARGET_FOLDER
 
           # 覆盖同名文件（无需额外检查）
-          mv temp/joevess-iptv_sources.m3u8 $TARGET_FILE
+          mv temp/aTV-result.m3u $TARGET_FILE
 
       # Step 3: 移动文件到 YueChan 文件夹（自动创建或覆盖）
       - name: Move file to folder YueChan
@@ -147,7 +147,7 @@ jobs:
           git add fanmingming/
           git add YanG-1989/
           git add iptv-org/
-          git add joevess/
+          git add aTV/
           git add YueChan/
           git add Guovin/
           git add vbskycn/
